it..was too small. fixed

--- a/web/css/styles.css
+++ b/web/css/styles.css
@@ -1506,5 +1506,5 @@ a.ui-state-default.ui-state-active {
 }
 
 #site-index .company-logo{
-  width: 15rem;
+  width: 25rem;
 }
